Fix the icon styles on Safari

--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,10 @@ body {
 }
 
 .img {
-  width: 30px;
+  width: 20px;
+  filter: invert(1);
+  -webkit-filter: (1);
+  cursor: pointer;
 }
 
 .corona {
